[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/document_graph"]

[project]
name = "document-graph"
version = "3.0.4"
description = "Graph-enhanced document processing toolkit for Neptune and Neo4j"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
  "pydantic>=2.0.0",
  "networkx>=3.0",
  "boto3>=1.26.0",
  "pandas>=2.0.0",
  "pluggy>=1.0.0",
]

[project.optional-dependencies]
graphrag = [
  "graphrag-lexical-graph>=3.18.0",
]
neptune = [
  "boto3>=1.26.0",
]
neo4j = [
  "neo4j>=5.0.0",
]
visualization = [
  "graph-notebook>=4.0.0",
]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "pytest-mock>=3.0",
]
all = [
  "document-graph[neptune,neo4j,visualization]",
]

[project.urls]
Homepage = "https://github.com/awslabs/graphrag-toolkit/tree/main/document-graph"
Repository = "https://github.com/awslabs/graphrag-toolkit"
Issues = "https://github.com/awslabs/graphrag-toolkit/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
