[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/graphrag_toolkit"]

[project]
name = "graphrag-toolkit-document-graph"
version = "3.0.7"
description = "Graph-enhanced document processing for AWS GraphRAG Toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
  "pydantic>=2.0.0",
  "networkx>=3.0",
  "boto3>=1.26.0",
  "pandas>=2.0.0",
  "pluggy>=1.0.0",
]

[project.optional-dependencies]
graphrag = [
  "graphrag-toolkit-lexical-graph>=3.18.0",
]
neptune = [
  "boto3>=1.26.0",
]
neo4j = [
  "neo4j>=5.0.0",
]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "pytest-mock>=3.0",
]

[project.urls]
Homepage = "https://github.com/aws/graphrag-toolkit"
Repository = "https://github.com/aws/graphrag-toolkit"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
